Fix 1+2N query pattern and guard placement in ConnectedUserCodeWorkflowReferenceAdminFacadeImpl
Batches the reference->project->connected-user join into 3 queries total via
new getConnectedUserProjects(List<Long>)/getConnectedUsers(List<Long>) service
methods, instead of two per-row lookups. Also moves @PreAuthorize("isTenantAdmin()")
to class level, matching AutomationWorkflowProjectAdminFacadeImpl.

Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_0135dSz29zpnDFw4VcZf7V3p