@@ -8,6 +8,9 @@
 package com.bytechef.ee.embedded.configuration.facade;
 
 import static org.assertj.core.api.Assertions.assertThat;
+import static org.mockito.ArgumentMatchers.anyList;
+import static org.mockito.Mockito.times;
+import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
 
 import com.bytechef.ee.embedded.configuration.domain.ConnectedUserProject;
@@ -18,6 +21,7 @@ import com.bytechef.ee.embedded.configuration.service.ConnectedUserProjectServic
 import com.bytechef.ee.embedded.connected.user.domain.ConnectedUser;
 import com.bytechef.ee.embedded.connected.user.service.ConnectedUserService;
 import java.util.List;
+import java.util.Map;
 import java.util.Set;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
@@ -46,37 +50,54 @@ class ConnectedUserCodeWorkflowReferenceAdminFacadeTest {
     private ConnectedUserCodeWorkflowReferenceAdminFacadeImpl connectedUserCodeWorkflowReferenceAdminFacade;
 
     @Test
-    void testGetReferencesJoinsBackToTheOwningConnectedUser() {
-        ConnectedUserProjectWorkflow reference = new ConnectedUserProjectWorkflow();
+    void testGetReferencesJoinsBackToTheOwningConnectedUserInBatch() {
+        ConnectedUserProjectWorkflow reference1 = new ConnectedUserProjectWorkflow();
 
-        reference.setConnectedUserProjectId(1L);
-        reference.setCatalogWorkflowUuid("uuid-1");
-        reference.setEnabled(true);
-        reference.setDangling(false);
+        reference1.setConnectedUserProjectId(1L);
+        reference1.setCatalogWorkflowUuid("uuid-1");
+        reference1.setEnabled(true);
+        reference1.setDangling(false);
 
-        when(connectedUserProjectWorkflowRepository.findAllByCatalogWorkflowUuidIn(Set.of("uuid-1")))
-            .thenReturn(List.of(reference));
+        ConnectedUserProjectWorkflow reference2 = new ConnectedUserProjectWorkflow();
 
-        ConnectedUserProject connectedUserProject = new ConnectedUserProject();
+        reference2.setConnectedUserProjectId(3L);
+        reference2.setCatalogWorkflowUuid("uuid-2");
+        reference2.setEnabled(false);
+        reference2.setDangling(true);
+        reference2.setDanglingReason("catalog workflow removed");
 
-        connectedUserProject.setId(1L);
-        connectedUserProject.setConnectedUserId(2L);
+        when(connectedUserProjectWorkflowRepository.findAllByCatalogWorkflowUuidIn(Set.of("uuid-1", "uuid-2")))
+            .thenReturn(List.of(reference1, reference2));
 
-        when(connectedUserProjectService.getConnectedUserProject(1L))
-            .thenReturn(connectedUserProject);
+        ConnectedUserProject connectedUserProject1 = new ConnectedUserProject();
 
-        ConnectedUser connectedUser = new ConnectedUser();
+        connectedUserProject1.setId(1L);
+        connectedUserProject1.setConnectedUserId(2L);
 
-        connectedUser.setExternalId("ext-1");
+        ConnectedUserProject connectedUserProject2 = new ConnectedUserProject();
 
-        when(connectedUserService.getConnectedUser(2L))
-            .thenReturn(connectedUser);
+        connectedUserProject2.setId(3L);
+        connectedUserProject2.setConnectedUserId(4L);
+
+        when(connectedUserProjectService.getConnectedUserProjects(anyList()))
+            .thenReturn(List.of(connectedUserProject1, connectedUserProject2));
+
+        ConnectedUser connectedUser1 = new ConnectedUser(Map.of(), null, true, "ext-1", 2L, null, 0);
+        ConnectedUser connectedUser2 = new ConnectedUser(Map.of(), null, true, "ext-2", 4L, null, 0);
+
+        when(connectedUserService.getConnectedUsers(anyList()))
+            .thenReturn(List.of(connectedUser1, connectedUser2));
 
         List<ConnectedUserCodeWorkflowReferenceDTO> result =
-            connectedUserCodeWorkflowReferenceAdminFacade.getReferences(Set.of("uuid-1"));
+            connectedUserCodeWorkflowReferenceAdminFacade.getReferences(Set.of("uuid-1", "uuid-2"));
 
-        assertThat(result).hasSize(1);
-        assertThat(result.getFirst()
+        assertThat(result).hasSize(2);
+        assertThat(result.get(0)
             .externalUserId()).isEqualTo("ext-1");
+        assertThat(result.get(1)
+            .externalUserId()).isEqualTo("ext-2");
+
+        verify(connectedUserProjectService, times(1)).getConnectedUserProjects(anyList());
+        verify(connectedUserService, times(1)).getConnectedUsers(anyList());
     }
 }
